@@ -99,6 +99,14 @@ You can also use our Glade logo to link from your home page to Glade.</font>
 <h2>Glade 2 Example Applications</h2>
 
 <ul>
+<li><a href="http://www.fiz.uni-lj.si/phoebe">PHOEBE</a> -
+used for modeling eclipsing binary stars. It has a very complicated
+interface, created in Glade (the largest Glade file I have ever seen!).
+Recent versions (0.30) use Glade 2, while previous versions used the
+original Glade.
+</ul>
+
+<ul>
 <li><a href="http://www.ferdyx.org/glocate.php">glocate2</a> -
 a simple file locator application using Glade 2 and libglade2 (in Spanish).
 </ul>
