@@ -1,3 +1,7 @@
+2004-03-10  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: added PHOEBE.
+
 2004-03-04  Damon Chaplin  <damon@gnome.org>
 
 	* apps.html: added DTraq.
